[gd_scene load_steps=2 format=2]

[ext_resource path="res://debug_tools/plot/FloatPlot.gd" type="Script" id=1]

[node name="FloatPlot" type="HBoxContainer"]
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 44.0
margin_bottom = 32.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 31.0
margin_bottom = 32.0

[node name="VariableName" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 31.0
margin_bottom = 14.0
text = "label"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentValue" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 31.0
margin_bottom = 32.0
text = "-"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graph" type="Control" parent="HBoxContainer"]
margin_left = 35.0
margin_right = 35.0
margin_bottom = 32.0

[node name="VBoxMinMax" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 39.0
margin_right = 44.0
margin_bottom = 32.0
alignment = 1

[node name="MaxLabel" type="Label" parent="HBoxContainer/VBoxMinMax"]
margin_right = 5.0
margin_bottom = 14.0
text = "-"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinLabel" type="Label" parent="HBoxContainer/VBoxMinMax"]
margin_top = 18.0
margin_right = 5.0
margin_bottom = 32.0
text = "-"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
